# perl-Amazon-API

./: .gitignore  .perlcriticrc  .perltidyrc  ChangeLog  Makefile  Makefile.am  Makefile.requirements  NEWS  NEWS.md  README-BUILD.md  README.md  build-github  build-requires  builder  buildspec.yml  configure.ac  cpanfile  perl-Amazon-API.spec.in  project.mk  release-notes-2.1.10.md  release-notes-2.1.11.md  release-notes-2.1.12.md  release-notes-2.1.13.md  release-notes.md  release-notes.mk  requirements.json  target-repo
.github/workflows/: build.yml
autom4te.cache/: output.0  traces.0  traces.1
autotools/: ads_PERL_MODULE.m4  ax_requirements_check.m4
cpan/: Makefile.am  README.md  buildspec.yml  recommends  requires  resources  test-requires
cpan-dist/: .gitignore  Makefile  README.md  buildspec.yml.in  requires
docker/: Dockerfile  Dockerfile.create-service  Dockerfile.rpm-build  Makefile.docker  README.md  build-dist  create-cpan-dist  docker-compose.yaml  package-create-service.lst  rpm-build
docker-rpm/: Dockerfile  Makefile  README.md  package.lst
lib/Amazon/API/: Error.pm.in  NullLogger.pm.in
lib/Amazon/API/Botocore/: Pod.pm.in  Shape.pm.in
release-notes/: release-notes-2.2.0.md  release-notes-2.2.1.md  release-notes-2.2.2.md  release-notes-2.2.3.md  release-notes-2.2.4.md  release-notes-2.2.5.md  release-notes-2.2.6.md  release-notes-2.2.7.md  release-notes-2.2.8.md  release-notes-2.2.9.md  release-notes-2.3.0.md  release-notes-2.3.1.md  release-notes-2.3.2.md  release-notes-2.3.3.md  release-notes-2.3.4.md  release-notes-2.3.5.md  release-notes-2.4.0.md  release-notes-2.4.1.md
src/examples/: APIExample.pm  README.md  cloudwatch-events.pm  docker-compose.yml  ec2.pm  ecr.pm  rt53.pm  secrets-manager.pm  sqs.pm  ssm.pm  sts.pm
src/main/perl/: Makefile.am
src/main/perl/lib/: Makefile.am  Makefile.in  README.md  directories.inc  modules.inc  perl-build.inc
src/main/perl/lib/Amazon/: API.pm.in
src/main/perl/lib/Amazon/API/: Botocore.pm.in  CloudWatchLogs.pm.in  Constants.pm.in  EC2.pm.in  ECR.pm.in  ECS.pm.in  Error.pm.in  SQS.pm.in  SSM.pm.in  STS.pm.in  SecretsManager.pm.in  Signature4.pm.in  Template.pm.in
src/main/perl/lib/Amazon/API/Botocore/: Pod.pm.in  Services.pm.in  Shape.pm.in
src/main/perl/lib/Amazon/API/Botocore/Shape/: Serializer.pm.in  Utils.pm.in
src/main/perl/lib/Amazon/API/HTTP/: Response.pm.in  UserAgent.pm.in
src/main/perl/lib/Amazon/API/Pod/: Parser.pm.in
src/main/perl/lib/Amazon/API/Pod/Simple/: Text.pm.in
src/main/perl/lib/t/: 03-query-map-shape.t  04-rest-xml-payload.t  06-signature4-adapter.t
src/main/perl/t/: 00-botocore-template-var.t  00-load.t  Makefile.am  amazon-api.t
t/: 00-amazon-api.t  01-urlencode.t  02-parse-service-url.t  amazon-api.t
